--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <body>
     <div class="container">
       <h1>Doctor Lookup</h1>
+      <h2>Enter the specialty needed, and receive 3 recommended doctors in the Seattle area.</h2>
       <form id="symptom-form">
         <label for="retrieve-symptom">Enter your symptom:</label>
         <input id="retrieve-symptom" type="text" onclick="Symptom(); return false";>
