--- a/index.html
+++ b/index.html
@@ -1,32 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="build/css/stylesheet.css">
+    <link rel="stylesheet" href="build/css/vendor.css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
-    <!-- <link rel="stylesheet" href="build/css/vendor.css">
-
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="build/js/vendor.min.js"></script>
-    <script type="text/javascript" src="build/js/app.js"></script>
-    <script type="text/javascript" src="js/symptom.js"></script>
-    <script type="text/javascript" src="js/symptom-interface.js"></script> -->
     <title>Doctor Lookup</title>
   </head>
   <body>
     <div class="container">
       <h1>Doctor Lookup</h1>
       <h2>Enter the specialty needed, and receive 3 recommended doctors in the Seattle area.</h2>
-      <form id="symptom-form">
-        <label for="retrieve-symptom">Enter your symptom:</label>
-        <input id="retrieve-symptom" type="text" onclick="Symptom(); return false";>
-        <button class="btn-success" id="symptom" type="button">Submit</button>
-      </form>
-      <div class="confirm-input"></div>
-      <ul id="doctor-results"></ul>
+
+      <label for="retrieve-symptom">Enter your symptom:</label>
+      <input id="retrieve-symptom" type="text">
+      <button class="btn-success" id="symptom" type="button">Find Doctors</button>
+      <div class="doctor-results"></div>
     </div>
   </body>
 </html>
