display 3 results using for loop

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container">
       <h1>Doctor Lookup</h1>
       <h2>Enter the specialty needed, and receive 3 recommended doctors in the Seattle area.</h2>
-
-      <label for="retrieve-symptom">Enter your symptom:</label>
+      <h3>Try entering 'psychology' or 'neurology'</h3>
+      <label for="retrieve-symptom">Enter the specialty you need:</label>
       <input id="retrieve-symptom" type="text">
       <button class="btn-success" id="symptom" type="button">Find Doctors</button>
       <div class="doctor-results"></div>
