--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <h1>Doctor Lookup</h1>
       <h2>Enter the specialty needed, and receive 3 recommended doctors in the Seattle area.</h2>
-      <h3>Try entering 'psychology' or 'neurology'</h3>
+      <h3>Try entering a field like 'psychology' or a symptom like 'pink eye':</h3>
       <label for="retrieve-symptom">Enter the specialty you need:</label>
       <input id="retrieve-symptom" type="text">
       <button class="btn-success" id="symptom" type="button">Find Doctors</button>
